fixed shifted sheet

--- a/src/styles/event-title.less
+++ b/src/styles/event-title.less
@@ -191,17 +191,17 @@
       padding-bottom: 40px;
     }
 
-    // & .event-title__cover:after {
-    //   content: '';
-    //   display: block;
-    //   position: absolute;
-    //   background-color: #000;
-    //   opacity: 0.6;
-    //   top: 75%;
-    //   left: 0;
-    //   width: 100%;
-    //   height: 100%;
-    // }
+    & .event-title__cover:after {
+      content: '';
+      display: block;
+      position: absolute;
+      background-color: #000;
+      opacity: 0.6;
+      top: 75%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &_no-footer {
@@ -215,7 +215,7 @@
       display: none;
     }
 
-    .event-title__img {
+    .event-title__cover {
       height: calc(100% - 40px);
     }
   }
